# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: page-analyzer.yml
page_analyzer/: __init__.py  app.py  app_handlers.py  data_base.py  validator.py
page_analyzer/templates/: index.html  url.html  urls.html
page_analyzer/tests/: test_page_analyzer.py
